@@ -1,3 +1,4 @@
+- ignore /proc/partitions when "solaris" extended partition is present (#33866)
 - translate the pkg summary when mdv-rpm-summary info is available
   (for the "Details" mode when installing packages)
 - ensure mdv-rpm-summary is installed first (if selected)
